trustfall_core/test_data/tests/parse_errors/invalid_transform_supplying_multiple_arguments_for_add_op.parse-error.ron
Err(OtherError("Transform argument count mismatch: expected 1 but found 2", Pos(
  line: 5,
  column: 42,
)))
